# manna-snips

./: .gitattributes  .gitignore  PRIVACY.md  README.md  current_state.md  decision_memory.md  next_steps.md  pyproject.toml  roadmap.md  task_state.json
docs/: launch-plan.md  public-hardening-notes.md  release-plan.md  retrospective-v0.1.1.md
installer/: manna-snips.iss
scripts/: build-installer.ps1  build-release.ps1  capture-readme-assets.ps1  create-manna-snips-shortcut.ps1  launch_readme_preview.py  manna_snips_app.pyw  save-clipboard-image.ps1  set-clipboard-image.ps1
src/manna_snips/: __init__.py  app.py
